infrastructure/k8s/keycloak/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgresql
  namespace: mbd-infra
spec:
  selector:
    app: keycloak-postgresql
  ports:
    - port: 5432
      targetPort: 5432
      name: postgresql
  type: ClusterIP
